[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-kg-rag"
version = "0.1.0"
description = "A RAG system using temporal knowledge graphs for document retrieval and Q&A"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "knowledge-graph", "temporal", "neo4j", "langchain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "neo4j>=5.15.0",
    "openai>=1.10.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "streamlit>=1.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "spacy>=3.7.0",
    "pypdf2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdown>=3.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "streamlit-agraph>=0.0.45",
    "pyvis>=0.3.2",
    "tiktoken>=0.5.0",
    "nltk>=3.8.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "ipykernel>=6.27.0",
]

[project.scripts]
ingest-documents = "temporal_kg_rag.cli.ingest:main"
init-db = "temporal_kg_rag.cli.init_db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
temporal_kg_rag = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/temporal_kg_rag --cov-report=term-missing"
